--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css" />
     <!-- main css -->
     <link rel="icon" href="/assets/images/Favicon-icon-Ecomax.png" />
-    <link rel="stylesheet" href="/assets/css/Style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
 
 </head>
 
@@ -152,8 +152,7 @@
                             <div
                                 class="carousel-item active hero-images hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/hero.png"
-                                    class="d-block img-fluid  imagexxl col-12" alt="images"
-                                    loading="lazy" />
+                                    class="d-block img-fluid  imagexxl col-12" alt="images" loading="lazy" />
                             </div>
                             <div
                                 class="carousel-item hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
@@ -243,8 +242,7 @@
                     <div class="col-12 col-xl-6 d-flex flex-column benefit-text ">
                         <div class="About-text d-flex">
                             <div class="bordericon1 d-flex justify-content-center align-items-center ">
-                                <img src="assets/images/home/Rectangle 581.png"
-                                    alt="images" />
+                                <img src="assets/images/home/Rectangle 581.png" alt="images" />
                             </div>
                             <div class="text-white text-us">
                                 <p class="d-md-none text-white mb-0 ">About us</p>
@@ -343,8 +341,7 @@
                             <div class="benefit-main">
                                 <div class="benefit-pro ">
                                     <div class=" icon5 text-center">
-                                        <img src="assets/images/home/MicrosoftTeams-image (7).png"
-                                            alt="images" />
+                                        <img src="assets/images/home/MicrosoftTeams-image (7).png" alt="images" />
                                     </div>
                                     <div class="icon-text icon-text1">
                                         <h3 class="text-center m-0"> Engine <br> protection</h3>
@@ -541,35 +538,31 @@
                                     cleaner, more efficient future for all.</p>
                             </div>
                             <div class="col">
-                                <div class="accordion  p-0" id="accordionExample">
+                                <div class="accordion p-0" id="accordionExample">
                                     <div class="accordion-item border-0 p-0 Vision">
-                                        <h2 class="accordion-header  Vision" id="headingOne">
+                                        <h2 class="accordion-header Vision" id="headingOne">
                                             <button class="accordion-button d-flex col-12 align-items-center" type="button" data-bs-toggle="collapse"
-                                                data-bs-target="#collapseOne" aria-expanded="true"
-                                                aria-controls="collapseOne">
-                                               <span class="col-11 Mission_title"> Vision</span>
-                                                <span class="col-1 justify-content-center d-flex"><i class="fa-solid fa-minus"></i></span>
+                                                data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                                <span class="col-11 Mission_title">Vision</span>
+                                                <span class="col-1 justify-content-center d-flex Vision_icon"><i class="fa-solid fa-minus"></i></span>
                                             </button>
-                                         
                                         </h2>
-                                        <div id="collapseOne" class="accordion-collapse  collapse show"
-                                            aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                                            <div class="accordion-body ">
-                                                <p class="Vision_text">To develop and manufacture
-                                                    specialty lubricant that provide
-                                                    value of money along with
-                                                    exceptional services support
-                                                    meeting customers' expectations</p>
+                                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                            <div class="accordion-body">
+                                                <p class="Vision_text">To develop and manufacture specialty lubricant that provide value of money along with exceptional services support meeting customers' expectations</p>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div>  
+                                                               
                                     <div class="accordion-item p-0 border-0 Vision">
-                                        <h2 class="accordion-header eadingTwo Vision d-flex justify-content-between align-items-center">
+                                        <h2
+                                            class="accordion-header eadingTwo Vision d-flex justify-content-between align-items-center">
                                             <button class="accordion-button  collapsed" type="button"
                                                 data-bs-toggle="collapse" data-bs-target="#collapseTwo"
                                                 aria-expanded="false" aria-controls="collapseTwo">
                                                 <span class="col-11 Mission_title">Mission</span>
-                                                <span class="col-1 justify-content-center d-flex"><i class="fa-solid fa-plus"></i></span>
+                                                <span class="col-1 justify-content-center d-flex Vision_icon"><i
+                                                        class="fa-solid fa-plus"></i></span>
                                             </button>
                                         </h2>
                                         <div id="collapseTwo" class="accordion-collapse collapse"
@@ -616,7 +609,8 @@
                     </div>
                     <div class="col-12 col-xxl-6">
                         <div class="col-12 d-flex Global-box d-flex justify-content-center flex-wrap ">
-                            <div class=" Global_Excellence_box Excellence_cout col-12 col-md-5 d-flex justify-content-center bg-white ">
+                            <div
+                                class=" Global_Excellence_box Excellence_cout col-12 col-md-5 d-flex justify-content-center bg-white ">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
                                         class="cout-sab  counter d-flex justify-content-center align-items-center flex-column ">
@@ -625,7 +619,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class=" Global_Excellence_box Excellence_cout col-12 col-md-5 d-flex justify-content-center bg-white ">
+                            <div
+                                class=" Global_Excellence_box Excellence_cout col-12 col-md-5 d-flex justify-content-center bg-white ">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
                                         class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
@@ -634,7 +629,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class=" Global_Excellence_box Excellence_cout col-12 col-md-5 d-flex justify-content-center bg-white ">
+                            <div
+                                class=" Global_Excellence_box Excellence_cout col-12 col-md-5 d-flex justify-content-center bg-white ">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
                                         class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
@@ -643,7 +639,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class=" Global_Excellence_box Excllence_cout col-12 col-md-5 d-flex justify-content-center bg-white ">
+                            <div
+                                class=" Global_Excellence_box Excllence_cout col-12 col-md-5 d-flex justify-content-center bg-white ">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
                                         class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
@@ -695,8 +692,7 @@
                     </div>
                     <div class="col-md-12 p-0 col-lg-8 ">
                         <div class="row text-wrap footer-set">
-                            <div
-                                class="col-12 d-none d-md-block col-sm-3 col-md-4 col-xl-3 p-0 float-left mb-3 ">
+                            <div class="col-12 d-none d-md-block col-sm-3 col-md-4 col-xl-3 p-0 float-left mb-3 ">
                                 <h5 class="mb-4 footer_heading">Quick Link</h5>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
@@ -1097,8 +1093,6 @@
             console.log(err);
         }
 
-    </script>
-    <script>
         $(window).scroll(function () {
             if ($(window).scrollTop() > 400) {
                 $(".scrollbar").addClass("show_scroll_btn");
@@ -1107,48 +1101,28 @@
                 $(".scrollbar").removeClass("show_scroll_btn");
             }
         });
-    </script>
-    <script>
-        const contact = () => {
-            let name = document.getElementById("name");
-            let lname = document.getElementById("lname");
-            let number = document.getElementById("number");
-            let email = document.getElementById("email");
-            event.preventDefault();
-            if (name.value == "") {
-                document.getElementById("n1").innerHTML = "Please fill in this field";
-            }
-            if (lname.value == "") {
-                document.getElementById("l1").innerHTML = "Please fill in this field";
-            }
-            if (number.value == 10 || number.value == "") {
-                document.getElementById("nu1").innerHTML = "Please fill in this field";
-            }
-            if (email.value == "") {
-                document.getElementById("e1").innerHTML = "Please fill in this field";
-            }
-            if (name.value == "" || lname.value == " " || number.value == "" || email.value == "") {
-                console.log("enter a fild");
-            } else {
-                let detaform = document.getElementById("detaform")
-                detaform.style.display = "none";
-                let tank = `Thank you for your interest in Ecomax, your trusted manufacturer and supplier of lubricant engine oil. We're
-          here to assist you with any inquiries, feedback, or requests you may have. Please feel free to reach out to us
-          using the information above:`
-                let mel = ""
-                tank = document.getElementById("Submit-form").innerHTML = tank
-                $(document).ready(function () {
-                    event.preventDefault();
-                    $('#contact').click(function () {
-                        $('#detaform').attr('action',
-                            'Pp3681382@gmail.com?subject=' +
-                            $('#name').val() + '&body=' + $('#email').val());
-                        $('#detaform').submit();
+
+            document.addEventListener('DOMContentLoaded', function () {
+                var accordionButtons = document.querySelectorAll('.accordion-button');
+
+                accordionButtons.forEach(function (button) {
+                    button.addEventListener('click', function () {
+                        var icon = button.querySelector('.Vision_icon i');
+
+                        // Toggle the icon class
+                        if (icon.classList.contains('fa-minus')) {
+                            icon.classList.remove('fa-minus');
+                            icon.classList.add('fa-plus');
+                        } else {
+                            icon.classList.remove('fa-plus');
+                            icon.classList.add('fa-minus');
+                        }
                     });
                 });
-            }
-        }
+            });
+
     </script>
+
     <script src="https://ik.imagekit.io/ecomax/assets/JS/script.js"></script>
 </body>
 
