--- a/industrial/products/index.html
+++ b/industrial/products/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="/assets/images/Favicon-icon-Ecomax.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="/assets/css/Style.css" />
+    <link rel="stylesheet" href="/assets/Css/Style.css" />
 </head>
 <body>
     <a href="#top">
@@ -314,7 +314,12 @@
                                         class="accordion-button m-3 d-flex  justify-content-between col-12 collapsed"
                                         type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo1"
                                         aria-expanded="false" aria-controls="collapseTwo1">
-                                        Quick Link
+                               
+                                        <span class="col-12 justify-content-between d-flex">
+                                            <span class="m-0 footer-link-title"> Quick Link</span>
+                                            <span class="m-0 footer-link-icon "><i
+                                                    class="fa-solid fa-angle-down mt-1 me-5"></i></span>
+                                        </span>
                                     </button>
                                 </h2>
                                 <div id="collapseTwo1" class="accordion-collapse collapse" aria-labelledby="headingTwo1"
@@ -643,7 +648,7 @@
                     for (let curIndex = 0; curIndex <= technicalSpecificationsArr.length; curIndex++) {
                         if (typeof technicalSpecificationsArr[curIndex] !== "undefined") {
 
-                            technicalSpecificationsHTML += '<div class="swiper-slide industrial_white industrial-border text-white' + (window.location.href == "http://127.0.0.1:5500/industrial/products/index.html?s=extreme-pressure-gear-lubricant" ? " " : " technical ") + (technicalSpecificationsArr[curIndex].has_blank ? " has-blank " : "") + (window.location.href == "http://127.0.0.1:5500/industrial/products/index.html?s=extreme-pressure-grease" ? " hecton-wrl-page " : "") + (window.location.href == "http://127.0.0.1:5500/industrial/products/index.html?s=hydro-power-68-heavy-duty-hydraulic-oil" ? " hecton-wrl-page " : "") + '"><h5 class="dynamic-data text-center industrial-border m-0"  property-title>';
+                            technicalSpecificationsHTML += '<div class="swiper-slide industrial_white industrial-border text-white' + (window.location.href == "https://ecomaxlubricant.com/industrial/products/index?s=extreme-pressure-gear-lubricant" ? " " : " technical ") + (technicalSpecificationsArr[curIndex].has_blank ? " has-blank " : "") + (window.location.href == "https://ecomaxlubricant.com/industrial/products/index?s=extreme-pressure-grease" ? " hecton-wrl-page " : "") + (window.location.href == "https://ecomaxlubricant.com/industrial/products/index?s=hydro-power-68-heavy-duty-hydraulic-oil" ? " hecton-wrl-page " : "") + '"><h5 class="dynamic-data text-center industrial-border m-0"  property-title>';
                             technicalSpecificationsHTML += technicalSpecificationsArr[curIndex].property + '</h5>';
                             technicalSpecificationsHTML += '<ul class="dynamic-data text-center list-none p-0 m-0 ">';
                             // Add indivial property here
