--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="/assets/images/Favicon-icon-Ecomax.png" />
-    <link rel="stylesheet" href="/assets/css/Styles.css" />
+    <link rel="stylesheet" href="/assets/css/styles.css" />
 </head>
 <body>
     <a href="#top">
@@ -262,8 +262,8 @@
                                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/MicrosoftTeams-image(7).png"
                                                     alt="images">
                                             </div>
-                                            <div class="icon-text">
-                                                <h3 class="text-center  m-0"> Engine protection</h3>
+                                            <div class="icon-text mt-0">
+                                                <h3 class="text-center  m-0 ps-2 pe-2"> Engine protection</h3>
                                             </div>
                                         </div>
                                     </div>
@@ -305,8 +305,8 @@
                                         <img src="https://ik.imagekit.io/ecomax/assets/images/home/MicrosoftTeams-image(7).png"
                                             alt="images">
                                     </div>
-                                    <div class="icon-text">
-                                        <h3 class="text-center  m-0"> Engine protection</h3>
+                                    <div class="icon-text mt-0 ">
+                                        <h3 class="text-center  m-0 ps-2 pe-2"> Engine protection</h3>
                                     </div>
                                 </div>
                             </div>
@@ -403,8 +403,8 @@
     <!-- MR. Mukesh Kalsaria Start -->
 
     <section class="Kalsaria contact-connect-section section_padding ">
-        <div class="kalsari1-img">
-            <img src="assets/images/about_page/Dots.png" alt="dots">
+        <div class="kalsari1-img d-flex justify-content-end me-2">
+            <img src="assets/images/about_page/Dots.png" width="50%" alt="dots">
         </div>
         <div class="container1">
             <div class="row">
