--- a/products/index.html
+++ b/products/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="/assets/images/Favicon-icon-Ecomax.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="/assets/css/Styles.css" />
+    <link rel="stylesheet" href="/assets/css/styles.css" />
 
 </head>
 
@@ -284,14 +284,14 @@
             <div class="row">
                 <div class="Similar-Products p-0">
 
-                    <div class="swiper Similar_Products ">
-                        <div class="Similar-Products-title d-flex align-items-center col-12">
+                    <div class="swiper Similar_Products " >
+                        <div class="Similar-Products-title d-flex align-items-center col-12" >
                             <h2 class="m-0">
                                 Similar Products
                             </h2>
-                            <div class="swiper-button-prev  Similar_Products_prev"><i
+                            <div class="swiper-button-prev top-0 Similar_Products_prev"><i
                                     class="fa-solid fa-arrow-left-long"></i></div>
-                            <div class="swiper-button-next Similar_Products_next"><i
+                            <div class="swiper-button-next top-0 Similar_Products_next"><i
                                     class="fa-solid fa-arrow-right-long"></i></div>
                         </div>
                         <div class="swiper-wrapper Similar_Products_d d-flex col-12">
@@ -302,7 +302,7 @@
                                     <a href="https://ecomaxlubricant.com/products/index?s=max-4t-20W-40&c=two-wheeler-engine-oil">
                                         <div class="products-img">
                                             <img src="https://ik.imagekit.io/ecomax/assets/images/collections/two-wheeler-engine-oil/products/max-4t-20w-40.png"
-                                                alt="Max 4T 20W-40" class="img-fluid col-12">
+                                                alt="Max 4T 20W-40" class="img-fluid col-12" >
                                         </div>
                                         <div class="products-title">
                                             <div class="d-flex justify-content-between">
