copy raite complit

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css" />
     <!-- main css -->
     <link rel="icon" href="/assets/images/Favicon-icon-Ecomax.png" />
-    <link rel="stylesheet" href="/assets/css/ecomax_style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
 <body class="d-xs-none d-sm-block">
     <a href="#top">
@@ -32,7 +32,6 @@
             <i class="fa-solid fa-arrow-up-long back-top "></i>
         </div>
     </a>
-
     <div class="top-bar top-bar-xs top-bar-sm top-bar-md top-bar-lg">
         <div class="container1">
             <div class="row">
@@ -673,7 +672,7 @@
                 <div class="row p-0">
                     <div class="col-lg-4 col-md-12 mb-4 mb-sm-5  text-light">
                         <a href="/"><img src="https://ik.imagekit.io/ecomax/assets/images/nav_logo.png" alt="logo image"
-                                width="340" class="footer-logo-image img-fluid "></a>
+                                 class="footer-logo-image img-fluid "></a>
                         <p class="footer-text">Powering Performance, Maximizing Efficiency: Ecomax - Your Engine's Best
                             Companion </p>
                         <div class="d-flex footer-icon-set">
