--- a/industrial/products/index.html
+++ b/industrial/products/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="/assets/images/Favicon-icon-Ecomax.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="/assets/css/ecomax_style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
 <body>
     <a href="#top">
@@ -267,7 +267,7 @@
                 <div class="row p-0">
                     <div class="col-lg-4 col-md-12 mb-4 mb-sm-5  text-light">
                         <a href="/"><img src="https://ik.imagekit.io/ecomax/assets/images/nav_logo.png" alt="logo image"
-                                width="340" class="footer-logo-image img-fluid "></a>
+                                class="footer-logo-image img-fluid "></a>
                         <p class="footer-text">Powering Performance, Maximizing Efficiency: Ecomax - Your Engine's Best
                             Companion
                         </p>
