--- a/index.html
+++ b/index.html
@@ -467,8 +467,7 @@
                                         <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize5.png"
                                             class="card-img-top" alt="images" />
                                     </div>
-                                    <div
-                                        class="card-body revitalize-card-body d-flex justify-content-center align-items-center">
+                                    <div class="card-body revitalize-card-body d-flex justify-content-center align-items-center">
                                         <p class="card-text text-center">GEAR CARE SAE 140 API GL-4</p>
                                     </div>
                                 </div>
