--- a/industrial/products/index.html
+++ b/industrial/products/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="/assets/images/Favicon-icon-Ecomax.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="/assets/css/ecomax_Style.css" />
+    <link rel="stylesheet" href="/assets/css/ecomaxstyle.css" />
 </head>
 <body>
     <a href="#top">
