--- a/index.html
+++ b/index.html
@@ -5,26 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Primary Meta Tags -->
-    <title>Ecomax</title>
-    <meta name="title" content="Ecomax" />
-    <meta name="description" content="" />
-
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ecomaxlubricant.com/" />
-    <meta property="og:title" content="Ecomax" />
-    <meta property="og:description" content="" />
-    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://ecomaxlubricant.com/" />
-    <meta property="twitter:title" content="Ecomax" />
-    <meta property="twitter:description" content="" />
-    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
-
-    <!-- Meta Tags Generated with https://metatags.io -->
+    
     <title>Ecomax</title>
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -46,7 +27,6 @@
     <link rel="icon" href="/assets/images/Favicon-icon-Ecomax.png" />
     <link rel="stylesheet" href="/assets/css/Style.css" />
 </head>
-
 <body class="d-xs-none d-sm-block">
     <a href="#top">
         <div class="scrollbar back d-none ">
@@ -488,8 +468,7 @@
                                         <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize5.png"
                                             class="card-img-top" alt="images" />
                                     </div>
-                                    <div
-                                        class="card-body revitalize-card-body d-flex justify-content-center align-items-center">
+                                    <div class="card-body revitalize-card-body d-flex justify-content-center align-items-center">
                                         <p class="card-text text-center">GEAR CARE SAE 140 API GL-4</p>
                                     </div>
                                 </div>
@@ -559,24 +538,19 @@
                                 <div class="accordion p-0" id="accordionExample">
                                     <div class="accordion-item border-0 p-0 Vision">
                                         <h2 class="accordion-header Vision" id="headingOne">
-                                            <button class="accordion-button d-flex col-12 align-items-center"
-                                                type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                                                aria-expanded="true" aria-controls="collapseOne">
+                                            <button class="accordion-button d-flex col-12 align-items-center" type="button" data-bs-toggle="collapse"
+                                                data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                                 <span class="col-11 Mission_title">Vision</span>
-                                                <span class="col-1 justify-content-center d-flex Vision_icon"><i
-                                                        class="fa-solid fa-minus"></i></span>
+                                                <span class="col-1 justify-content-center d-flex Vision_icon"><i class="fa-solid fa-minus"></i></span>
                                             </button>
                                         </h2>
-                                        <div id="collapseOne" class="accordion-collapse collapse show"
-                                            aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                             <div class="accordion-body">
-                                                <p class="Vision_text">To develop and manufacture specialty lubricant
-                                                    that provide value of money along with exceptional services support
-                                                    meeting customers' expectations</p>
+                                                <p class="Vision_text">To develop and manufacture specialty lubricant that provide value of money along with exceptional services support meeting customers' expectations</p>
                                             </div>
                                         </div>
-                                    </div>
-
+                                    </div>  
+                                                               
                                     <div class="accordion-item p-0 border-0 Vision">
                                         <h2
                                             class="accordion-header eadingTwo Vision d-flex justify-content-between align-items-center">
@@ -698,7 +672,7 @@
                 <div class="row p-0">
                     <div class="col-lg-4 col-md-12 mb-4 mb-sm-5  text-light">
                         <a href="/"><img src="https://ik.imagekit.io/ecomax/assets/images/nav_logo.png" alt="logo image"
-                                class="footer-logo-image img-fluid "></a>
+                                 class="footer-logo-image img-fluid "></a>
                         <p class="footer-text">Powering Performance, Maximizing Efficiency: Ecomax - Your Engine's Best
                             Companion </p>
                         <div class="d-flex footer-icon-set">
@@ -1123,24 +1097,24 @@
                 $(".scrollbar").removeClass("show_scroll_btn");
             }
         });
-        document.addEventListener('DOMContentLoaded', function () {
-            var accordionButtons = document.querySelectorAll('.accordion-button');
+            document.addEventListener('DOMContentLoaded', function () {
+                var accordionButtons = document.querySelectorAll('.accordion-button');
 
-            accordionButtons.forEach(function (button) {
-                button.addEventListener('click', function () {
-                    var icon = button.querySelector('.Vision_icon i');
+                accordionButtons.forEach(function (button) {
+                    button.addEventListener('click', function () {
+                        var icon = button.querySelector('.Vision_icon i');
 
-                    // Toggle the icon class
-                    if (icon.classList.contains('fa-minus')) {
-                        icon.classList.remove('fa-minus');
-                        icon.classList.add('fa-plus');
-                    } else {
-                        icon.classList.remove('fa-plus');
-                        icon.classList.add('fa-minus');
-                    }
+                        // Toggle the icon class
+                        if (icon.classList.contains('fa-minus')) {
+                            icon.classList.remove('fa-minus');
+                            icon.classList.add('fa-plus');
+                        } else {
+                            icon.classList.remove('fa-plus');
+                            icon.classList.add('fa-minus');
+                        }
+                    });
                 });
             });
-        });
     </script>
     <script src="https://ik.imagekit.io/ecomax/assets/JS/script.js"></script>
 </body>
