--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta name="description" content="Ecomax is a leading manufacturer and supplier of high-quality lubricants and oils, dedicated to providing superior products." />
     <title>Ecomax</title>
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -504,7 +504,7 @@
                     <div class=" btn-facility">
                         <a href="/collections/">
                             <button class="btn2 d-flex align-items-center">
-                                <span class="about-btn  d-flex align-items-center justify-content-center">
+                                <span class="about-btn d-flex align-items-center justify-content-center">
                                     <i class="fa-solid fa-arrow-up-long"></i>
                                 </span>
                                 <span class="text">View All</span>
