--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Ecomax is a leading manufacturer and supplier of high-quality lubricants and oils, dedicated to providing superior products." />
     <title>Ecomax | About Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -95,8 +96,7 @@
                                     <li class="m-2">
                                         <a href="/">HOME</a>
                                     </li>
-                                    <li class="dropdown-products-res ">
-                                
+                                    <li class="dropdown-products-res">
                                         <li class="dropdown-products">
                                             <a href="#" class="ms-2">
                                                 PRODUCTS
@@ -110,8 +110,6 @@
                                                 </li>
                                             </ul>
                                         </li>
-                                     </li>
-
                                     <li class="m-2">
                                         <a href="about.html"  class="text-success">ABOUT US </a>
                                     </li>
@@ -404,7 +402,7 @@
 
     <section class="Kalsaria contact-connect-section section_padding ">
         <div class="kalsari1-img d-flex justify-content-end me-2">
-            <img src="assets/images/about_page/Dots.png" width="50%" alt="dots">
+            <img src="assets/images/about_page/Dots.png" alt="dots">
         </div>
         <div class="container1">
             <div class="row">
