--- a/industrial/index.html
+++ b/industrial/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Ecomax is a leading manufacturer and supplier of high-quality lubricants and oils, dedicated to providing superior products." />
     <title>Ecomax | industrial</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -22,7 +23,7 @@
             <i class="fa-solid fa-arrow-up-long back-top "></i>
         </div>
     </a>
-    </div>
+
     <!-- Navbar Start -->
     <div class="top-bar top-bar-xs top-bar-sm top-bar-md top-bar-lg">
         <div class="container1">
@@ -31,8 +32,6 @@
             </div>
         </div>
     </div>
-
-
     <!-- Start: header -->
     <section class="header header-xs header-sm header-md header-lg">
         <div class="container1">
