--- a/products/index.html
+++ b/products/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Ecomax is a leading manufacturer and supplier of high-quality lubricants and oils, dedicated to providing superior products." />
     <title>Ecomax | Products</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -166,7 +167,7 @@
                                 </div>
                             </div>
                           </div>
-                          <div thumbsSlider="" class="swiper product_swiper " >
+                          <div class="swiper product_swiper " >
                             <div class=" swiper-wrapper mb-0 product-sab-images text-white imag-mini" id="data-images_mini" >
                              
                             </div>
