--- a/index.html
+++ b/index.html
@@ -248,8 +248,7 @@
                             </div>
                         </div>
                         <div class="About-title mt-1">
-                            <h2 class="m-0">The Feature Of Ecomax Engine <br
-                                    class="d-none d-md-block d-lg-none d-xl-block"> Oil That You Will Benefit From</h2>
+                            <h2 class="m-0">The Feature Of Ecomax Engine <br class="d-none d-md-block d-lg-none d-xl-block"> Oil That You Will Benefit From</h2>
                         </div>
                         <div class="sparkle-button">
                             <div class="sparkle-button">
