--- a/career.html
+++ b/career.html
@@ -278,13 +278,13 @@
                         </p>
                         <div class="d-flex footer-icon-set">
                             <div class="d-flex justify-content-center align-items-center footer-icon-container">
-                                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
                             </div>
                             <div class="d-flex justify-content-center align-items-center footer-icon-container">
-                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a href="https://www.linkedin.com/login"><i class="fa-brands fa-linkedin-in"></i></a>
                             </div>
                             <div class="d-flex justify-content-center align-items-center footer-icon-container">
-                                <a href="#"><i class="fa-brands fa-behance"></i></a>
+                                <a href="https://www.behance.net/search/projects/?search=login"><i class="fa-brands fa-behance"></i></a>
                             </div>
                         </div>
                     </div>
