--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                             <div class="benefit-main">
                                 <div class="benefit-pro ">
                                     <div class=" icon5 text-center">
-                                        <img src="assets/images/home/MicrosoftTeams-image (7).png" alt="images" />
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/MicrosoftTeams-image(7).png" alt="images" />
                                     </div>
                                     <div class="icon-text icon-text1">
                                         <h3 class="text-center m-0"> Engine <br> protection</h3>
