--- a/industrial/index.html
+++ b/industrial/index.html
@@ -211,15 +211,22 @@
                         </p>
                         <div class="d-flex footer-icon-set">
                             <div class="d-flex justify-content-center align-items-center footer-icon-container">
-                                <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                                <a href="https://www.instagram.com/" aria-label="Instagram">
+                                    <i class="fa-brands fa-instagram"></i>
+                                </a>
                             </div>
                             <div class="d-flex justify-content-center align-items-center footer-icon-container">
-                                <a href="https://www.linkedin.com/login"><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a href="https://www.linkedin.com/login" aria-label="LinkedIn">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </a>
                             </div>
                             <div class="d-flex justify-content-center align-items-center footer-icon-container">
-                                <a href="https://www.behance.net/search/projects/?search=login"><i class="fa-brands fa-behance"></i></a>
+                                <a href="https://www.behance.net/search/projects/?search=login" aria-label="Behance">
+                                    <i class="fa-brands fa-behance"></i>
+                                </a>
                             </div>
                         </div>
+                        
                     </div>
                     <div class="col-md-12 p-0 col-lg-8 ">
                         <div class="row text-wrap">
