--- a/contactus.html
+++ b/contactus.html
@@ -16,64 +16,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="icon" href="/assets/images/Favicon-icon-Ecomax.png" />
   <link rel="stylesheet" href="/assets/css/Style.css" />
-  <style>
-    #chartdiv {
-      width: 100%;
-      height: 600px
-    }
-    .map-section {
-      padding-bottom: 100px;
-    }
-    .am5-layer-30 {
-      display: none;
-    }
-    g[aria-labelledby="id-72-title"] {
-      display: none;
-    }
-    @media (max-width:768px) {
-      h2.title-contact {
-        font-size: 26px;
-        line-height: normal;
-      }
-      #chartdiv {
-        width: 100%;
-        height: 250px;
-      }
-    }
-    .loader-section {
-    text-align: center;
-    opacity: 0;
-    transition: all 0.5s ease-in;
-  }
-  .contact-form-section.active .loader-section {
-    opacity: 1;
-  }
-  .contact-form-section.active #detaform {
-    display: none;
-  }
-  .loader {
-  width: 48px;
-  height: 48px;
-  border: 5px solid #FFF;
-  border-bottom-color:#1e5f28;
-  border-radius: 50%;
-  display: inline-block;
-  box-sizing: border-box;
-  animation: rotation 1s linear infinite;
-  }
 
-  @keyframes rotation {
-  0% {
-      transform: rotate(0deg);
-  }
-  100% {
-      transform: rotate(360deg);
-  }
-  } 
-  </style>
 </head>
 <body>
-  <a href="#top">
+  <a href="#top"  aria-label="top">
     <div class="scrollbar back d-none">
     <i class="fa-solid fa-arrow-up-long back-top "></i>
     </div>
