--- a/products/index.html
+++ b/products/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <a href="#top">
+    <a href="#top" aria-label="top">
         <div class="scrollbar back d-none">
         <i class="fa-solid fa-arrow-up-long back-top "></i>
         </div>
