--- a/collections/index.html
+++ b/collections/index.html
@@ -204,14 +204,15 @@
                     </div>
                     <div class="col-md-12 p-0 col-lg-8 ">
                         <div class="row text-wrap">
-                            <div class="col-12 d-none d-md-block col-sm-3 col-md-4 col-xl-3 p-0 float-left mb-3">
-                                <h4 class="mb-4 footer_heading">Quick Link</h4>
+                            <div class="col-12 d-none d-md-block col-sm-3 col-md-4 col-xl-3  p-0 float-left mb-3 ">
+                                <h5 class="mb-4 footer_heading">Quick Link</h5>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="/" class="link-light text-decoration-none">Home</a>
+                                        <a href="/" class="link-light text-decoration-none ">Home</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="/collections/" class="link-light text-decoration-none text-success1">Automotive Products</a>
+                                        <a href="/collections/"
+                                            class="link-light text-decoration-none text-success1">Automotive Products</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                                         <a href="/industrial/" class="link-light text-decoration-none">Industrial Products</a>
@@ -224,7 +225,6 @@
                                     </li>
                                 </ul>
                             </div>
-                            
                             <div class="accordion-item footer-link d-md-none col-12  p-0 float-left mb-3">
                                 <h2 class="accordion-header" id="headingTwo1">
                                     <button
