--- a/index.html
+++ b/index.html
@@ -695,19 +695,17 @@
                     </div>
                     <div class="col-md-12 p-0 col-lg-8 ">
                         <div class="row text-wrap footer-set">
-                            <div class="col-12 d-none d-md-block col-sm-3 col-md-4 col-xl-3 p-0 float-left mb-3 ">
-                                <h5 class="mb-4 footer_heading">Quick Link</h5>
+                            <div class="col-12 d-none d-md-block col-sm-3 col-md-4 col-xl-3 p-0 float-left mb-3">
+                                <h4 class="mb-4 footer_heading">Quick Link</h4>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="/" class="link-light text-decoration-none text-success1">Home</a>
+                                        <a href="/" class="link-light text-decoration-none">Home</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="collections/" class="link-light text-decoration-none">Automotive
-                                            Products</a>
+                                        <a href="/collections/" class="link-light text-decoration-none text-success1">Automotive Products</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="industrial/" class="link-light text-decoration-none">Industrial
-                                            Products</a>
+                                        <a href="/industrial/" class="link-light text-decoration-none">Industrial Products</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                                         <a href="#" class="link-light text-decoration-none">Brochure</a>
