--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <div class=" d-flex  about-sab">
                         <div class="About-text d-flex">
                             <div class="bordericon d-flex justify-content-center align-items-center ">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/Rectangle 58.png"
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/Rectangle_58.png"
                                     alt="images" />
                             </div>
                             <p class="about-title m-0 ">About Us</p>
