--- a/index.html
+++ b/index.html
@@ -1130,8 +1130,64 @@ worker.onmessage = function(e) {
 import(/* webpackChunkName: "myModule" */ './myModule').then(module => {
     // Use the module
 });
+import(/* webpackChunkName: "moduleA" */ './moduleA').then(module => {
+    module.doSomething();
+});
+const LazyComponent = React.lazy(() => import('./LazyComponent'));
+// Before optimization
+for (let i = 0; i < array.length; i++) {
+    process(array[i]);
+}
+// After optimization
+const length = array.length;
+for (let i = 0; i < length; i++) {
+    process(array[i]);
+}
+function debounce(func, wait) {
+    let timeout;
+    return function(...args) {
+        clearTimeout(timeout);
+        timeout = setTimeout(() => func.apply(this, args), wait);
+    };
+}
+window.addEventListener('resize', debounce(() => {
+    console.log('Resize event debounced');
+}, 200));
+
+function throttle(func, limit) {
+    let lastFunc;
+    let lastRan;
+    return function(...args) {
+        const context = this;
+        if (!lastRan) {
+            func.apply(context, args);
+            lastRan = Date.now();
+        } else {
+            clearTimeout(lastFunc);
+            lastFunc = setTimeout(function() {
+                if ((Date.now() - lastRan) >= limit) {
+                    func.apply(context, args);
+                    lastRan = Date.now();
+                }
+            }, limit - (Date.now() - lastRan));
+        }
+    };
+}
+window.addEventListener('scroll', throttle(() => {
+    console.log('Scroll event throttled');
+}, 200));
+
+const fragment = document.createDocumentFragment();
+for (let i = 0; i < 100; i++) {
+    const div = document.createElement('div');
+    fragment.appendChild(div);
+}
+document.body.appendChild(fragment);
+
+
 
     </script>
+
     <script src="https://ik.imagekit.io/ecomax/assets/JS/script.js"></script>
 </body>
 
