--- a/index.html
+++ b/index.html
@@ -149,8 +149,7 @@
                         <div class="carousel-inner">
                             <div
                                 class="carousel-item active hero-images hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/hero.png"
-                                    class="d-block img-fluid  imagexxl col-12" alt="images" loading="lazy" />
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/hero.png" class="d-block img-fluid imagexxl col-12" alt="images">
                             </div>
                             <div
                                 class="carousel-item hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
@@ -1119,8 +1118,6 @@
                     });
                 });
             });
-
-            
     </script>
     <script src="https://ik.imagekit.io/ecomax/assets/JS/script.js"></script>
 </body>
