--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
                         <div class="carousel-inner">
                             <div
                                 class="carousel-item active hero-images hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/hero.png" class="d-block img-fluid imagexxl col-12" alt="images">
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/hero.png"
+                                    class="d-block img-fluid  imagexxl col-12" alt="images" loading="lazy" />
                             </div>
                             <div
                                 class="carousel-item hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
