--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css" />
     <!-- main css -->
     <link rel="icon" href="/assets/images/Favicon-icon-Ecomax.png" />
-    <link rel="stylesheet" href="/assets/css/Style.css" />
+    <link rel="stylesheet" href="/assets/css/Ecomax_Style.css" />
 </head>
 <body class="d-xs-none d-sm-block">
     <a href="#top"  aria-label="top">
